--- a/detailmember.html
+++ b/detailmember.html
@@ -3,17 +3,23 @@
     <head>
         <link rel="stylesheet" href="desainmember.css">
         <title>
-            Member Information Detail
+            Euforia Member Information Detail
         </title>
+        <header>
+            <h1>Euforia English Community</h1>
+            <nav>
+                <h4><a href="pendaftaran.html">Register Now</a></h4>
+            </nav>
+        </header>
     </head>
 
     <body>
-        <h1>
+        <h2>
             Member Information Detail
-        </h1>
+        </h2>
 
         <p>
-            Congratulations! You are now an official member of our English Club. Here's your profile detail
+            Congratulations! You are now an official member of our English Community. Here's your profile detail
         </p>
         
         <center><table>
@@ -48,4 +54,10 @@
         </table>
     </center>
     </body>
+
+    <br><br><br>
+
+    <footer>
+        Copyright. All rights reserved.
+    </footer>
 </html>
