--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -3,15 +3,20 @@
     <head>
         <link rel="stylesheet" href="desainpendaftaran.css">
         <title>
-                English Club Member Registration
+                Member Registration
         </title>
+        <header>
+            <h1>Euforia English Community</h1>
+            <nav>
+                <h3><a href="pendaftaran.html">Register Now</a></h3>
+            </nav>
+        </header>
     </head>
 
     <body>
-        <h1>
-            English Club Member Registration
-        </h1>
-
+        <h2>
+            Member Registration
+        </h2>
         <div>
             <form method="GET" action="./detailmember.html">
                     <p>
@@ -45,5 +50,9 @@
             </form>
         </div>
     </body>
+
+    <footer>
+        Copyright. All rights reserved.
+    </footer>
 
 </html>
